tests/vendor/valid/simple/empty_expression.c
//expect 0
//tags: simple
int main() {
    return 0;;;
}