tests/vendor/invalid/syntax/switch_missing_paren.c
//tags: simple, switch
int main() {
    switch 3 {
        case 3: return 0;
    }
}